# manufacturing-agent

./: README.md
manufacturing_agent/: README.md  pyproject.toml
manufacturing_agent/src/data/: control_options_L2.txt  control_options_L3.txt  control_options_L5.txt
manufacturing_agent/src/manufacturing_agent/: bridge.py  crew.py  main.py  main.py.backup
manufacturing_agent/src/manufacturing_agent/config/: agents.yaml  tasks.yaml
manufacturing_agent/src/manufacturing_agent/tools/: file_tools.py  human_tools.py
manufacturing_agent/src/output/: 1_reasoning.txt  2_param.json  2_reasoning.txt  3_param.json  3_reasoning.txt  4_param.json  4_reasoning.txt  5_param.json  5_reasoning.txt
