[project]
name = "manufacturing_agent"
version = "0.1.0"
description = "manufacturing_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
manufacturing_agent = "manufacturing_agent.main:run"
run_crew = "manufacturing_agent.main:run"
train = "manufacturing_agent.main:train"
replay = "manufacturing_agent.main:replay"
test = "manufacturing_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
